--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,17 @@
-# Python CircleCI 2.0 configuration file
+# CircleCI 2.1 configuration file
 #
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
-version: 2
+version: 2.1
+commands:
+  compile:
+    parameters:
+      target:
+        type: string
+      profile:
+        type: string
+    steps:
+      - run: |
+          cd mbed-os-example-psa
+          mbed compile -t GCC_ARM -m <<parameters.target>> --profile <<parameters.profile>>
 jobs:
   build:
     docker:
@@ -14,5 +23,69 @@ jobs:
       - run: |
           cd mbed-os-example-psa
           mbed deploy
-          mbed compile -t GCC_ARM -m K64F
-
+      - compile:
+          target: "ARM_MUSCA_S1"
+          profile: "develop"
+      - compile:
+          target: "ARM_MUSCA_S1"
+          profile: "release"
+      - compile:
+          target: "ARM_MUSCA_B1"
+          profile: "develop"
+      - compile:
+          target: "ARM_MUSCA_B1"
+          profile: "release"
+      - compile:
+          target: "K64F"
+          profile: "develop"
+      - compile:
+          target: "K64F"
+          profile: "release"
+      - compile:
+          target: "K66F"
+          profile: "develop"
+      - compile:
+          target: "K66F"
+          profile: "release"
+      - compile:
+          target: "NUCLEO_F429ZI"
+          profile: "develop"
+      - compile:
+          target: "NUCLEO_F429ZI"
+          profile: "release"
+      - compile:
+          target: "FVP_MPS2_M0"
+          profile: "develop"
+      - compile:
+          target: "FVP_MPS2_M0"
+          profile: "release"
+      - compile:
+          target: "FVP_MPS2_M0P"
+          profile: "develop"
+      - compile:
+          target: "FVP_MPS2_M0P"
+          profile: "release"
+      - compile:
+          target: "FVP_MPS2_M3"
+          profile: "develop"
+      - compile:
+          target: "FVP_MPS2_M3"
+          profile: "release"
+      - compile:
+          target: "FVP_MPS2_M4"
+          profile: "develop"
+      - compile:
+          target: "FVP_MPS2_M4"
+          profile: "release"
+      - compile:
+          target: "FVP_MPS2_M7"
+          profile: "develop"
+      - compile:
+          target: "FVP_MPS2_M7"
+          profile: "release"
+      - compile:
+          target: "GD32_F450ZI"
+          profile: "develop"
+      - compile:
+          target: "GD32_F450ZI"
+          profile: "release"
